# waveshare-ws170120-brightness

./: .gitignore  README.md  USB-Protocol.md  pyproject.toml  requirements.txt
reverse-engineering/: 2024-01-19-waveshare-brightness.pcapng  USB-Protocol.md
src/: waveshare-ws170120-brightness-control.py
waveshare_ws170120_brightness/: __init__.py
